tests/fixtures/fail/strict-optional-dir-violation/server/forbidden/index.ts
// This directory is not allowed by strict rules
